refactor: use immutable decision configuration and Java 21 idioms